[package]
name = "tokio-core"
version = "0.1.17"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tokio-core"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-core/0.1"
description = """
Core I/O and event loop primitives for asynchronous I/O in Rust. Foundation for
the rest of the tokio crates.
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "tokio-rs/tokio-core" }
appveyor = { repository = "alexcrichton/tokio-core" }

[dependencies]
bytes = {path = "../bytes"}
log = "0.4"
mio = {path = "../mio-nonbroken"}
scoped-tls = "0.1.0"
iovec = {path = "../iovec-backport"}
tokio-io ={path = "../tokio/tokio-io"}
tokio = {path = "../tokio"}
tokio-executor = {path = "../tokio/tokio-executor"}
tokio-reactor = {path = "../tokio/tokio-reactor"}
tokio-timer = {path = "../tokio/tokio-timer"}
futures = "0.1.21"

[dev-dependencies]
env_logger = { version = "0.4", default-features = false }
flate2 = { version = "1", features = ["tokio"] }
futures-cpupool = "0.1"
http = "0.1"
httparse = "1.0"
libc = "0.2"
num_cpus = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
